Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4075

osd_xattr_get()) ASSERTION( buf->lb_len == sizeof(dt_obj_version_t) ) failed:

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.5.0
    • 3
    • 10930

      This is a minor issue since it requires root to exploit.

      # echo 0 | tee /proc/fs/lustre/llite/*/xattr_cache
      0
      # getfattr -n trusted.version /mnt/lustre
      
      Message from syslogd@t at Oct  7 09:28:05 ...
       kernel:LustreError: 10513:0:(osd_handler.c:2741:osd_xattr_get()) ASSERTION( buf->lb_len == sizeof(dt_obj_version_t) ) failed:
      
      Message from syslogd@t at Oct  7 09:28:05 ...
       kernel:LustreError: 10513:0:(osd_handler.c:2741:osd_xattr_get()) LBUG
      

      The special case for XATTR_NAME_VERSION should provide the usual "if buf is NULL then return size..." behavior.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: